--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysql-connector-python==8.3.0
+mysqlclient==2.2.4
 numpy==1.24.4
 pandas==2.0.3
 PyMySQL==1.1.0
