--- a/database.yml
+++ b/database.yml
@@ -16,3 +16,17 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  # app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   restart: always
+  #   ports:
+  #     - "5000:5000"
+  #   volumes:
+  #     - .:/app
+  #   depends_on:
+  #     - db
+
+  
