--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==9.0.1
 blinker==1.7.0
 click==8.1.7
+cryptography
 flask==3.0.2
 Flask-MySQL==1.5.2
 flask-mysql-connector==1.1.0
@@ -24,5 +25,6 @@ six==1.16.0
 SQLAlchemy==2.0.28
 typing-extensions==4.10.0
 tzdata==2024.1
+waitress
 werkzeug==3.0.1
 zipp==3.18.1
